fix(email): email color not showing up in production

--- a/src/styles.module.css
+++ b/src/styles.module.css
@@ -50,7 +50,7 @@
     border-radius: 5px;
   }
   
-  .cardFont, button, a, h2, h3, h4 {
+  .cardFont, button, h2, h3, h4 {
     font-family: 'Jost', sans-serif;
     margin-bottom: 5px;
     margin-top: 5px;
